# SillyEnum

./: .clang-format  CMakeLists.txt  Readme.md  conanfile.txt
include/: EnumInfo.h  MakeEnum.h
test/: CMakeLists.txt  Tests.cpp
